# physics_atv_visual_mapping

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
config/_old/: rzr_voxel_mapping.yaml
config/image_processing/: dinov2reg_pca.yaml  example.yaml  jafar_vlad.yaml  loftup.yaml  loftup_grayscale_rgb.yaml  loftup_thermal.yaml  loftup_vlad.yaml  loftup_vlad_anythermal.yaml  loftup_vlad_thermal.yaml  radiov3.yaml  radiov3_siglip2_full.yaml  radiov3_siglip2_pca.yaml  radiov3_siglip2_pca_only.yaml  talk2dino_rellis3d.yaml  vlad.yaml
config/localmapping/: bev.yaml  cov_voxel.yaml  (+3 more)
launch/: cam_tf_pub.launch  camera_info_publisher.launch.py  dino_localmapping.launch  dino_localmapping.launch.py  dino_localmapping_anymal.launch  dino_localmapping_wheelchair.launch  distilled_dino_localmapping.launch  distilled_radio_localmapping.launch  mppi.namespace.py  pc_voxel_localmapping.launch.py  radio_localmapping.launch  spot.launch.py
physics_atv_visual_mapping/: camera_info_publisher.py  dino_cost.py  dino_localmapping.py  dino_localmapping_fast.py  dino_localmapping_org_slow.py  feature_key_list.py  feature_pointcloud.py  odom_to_tf.py  pc_voxel_localmapping.py  utils.py  viz_gridmap.py  voxel_localmapping.py
physics_atv_visual_mapping/ros2_numpy_cpp/: CMakeLists.txt
physics_atv_visual_mapping/ros2_numpy_cpp/scripts/: test_grid_pub.py
physics_atv_visual_mapping/ros2_numpy_cpp/src/: grid_pub.cpp
scripts/: test_gridmap_pub_speed.py  test_pub_speed.py  test_voxel_grid_pub_speed.py
tests/: subvoxel_test.py  test.py  voxel_test.py  zstats_test.py
(+174 files in other folders)
